# kintsugi-data

./: pyproject.toml
data/: county_groups.parquet
data/county_neighbors/: county_adjacency2024.txt  county_adjacency2025.txt
data/crosswalk/PUMA/: geocorr_puma_2010_to_county_2020_with_afact2.csv
data/crosswalk/county/: ct_cou_to_cousub_crosswalk.txt
data/crosswalk/county_to_zip/: county_to_zip_2016.parquet  county_to_zip_2017.parquet  county_to_zip_2018.parquet  county_to_zip_2019.parquet  county_to_zip_2020.parquet  county_to_zip_2021.parquet  county_to_zip_2022.parquet  county_to_zip_2023.parquet  county_to_zip_2024.parquet  county_to_zip_2025.parquet
data/crosswalk/zip_to_county/: zip_to_county_2016.parquet  zip_to_county_2017.parquet  zip_to_county_2018.parquet  zip_to_county_2019.parquet  zip_to_county_2020.parquet  zip_to_county_2021.parquet  zip_to_county_2022.parquet  zip_to_county_2023.parquet  zip_to_county_2024.parquet  zip_to_county_2025.parquet
data/pop/county_cc/: county_pop_2010.parquet  county_pop_2011.parquet  county_pop_2012.parquet  county_pop_2013.parquet  county_pop_2014.parquet  county_pop_2015.parquet  county_pop_2016.parquet  county_pop_2017.parquet  county_pop_2018.parquet  county_pop_2019.parquet  county_pop_2020.parquet  county_pop_2021.parquet  county_pop_2022.parquet  county_pop_2023.parquet  county_pop_2024.parquet
data/pop/state/: state_pop_2016.parquet  state_pop_2017.parquet  (+5 more)
data_pre/: county_grouping.xlsx
src/kintsugi_data/: county_groups.py  county_pop.py  globals.py  state_pop.py  zip_county_crosswalk.py
(+1 files in other folders)
