[project]
name = "kintsugi-data"
version = "0.1.0"
description = "Data and processing code for kintsugi"
readme = "README.md"
authors = [
    { name = "Andrew Tiu", email = "63322884+winter-again@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastexcel>=0.19.0",
    "polars>=1.38.1",
]

[tool.basedpyright]
include = ["src"]

reportUnusedCallResult = false
reportUnknownMemberType = false
